# mentorme

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: .gitignore  manage.py  run.sh
app/mentoring/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/mentoring/migrations/: 0001_initial.py  0002_profile_active_profile_date_joined_and_more.py
app/mentoring/templates/mentoring/: index.html  profile_detail.html  profile_form.html
app/mentorme/: asgi.py  models.py  settings.py  urls.py
app/templates/: _base.html  _nav.html  _nav_item.html  _nav_user.html  _nav_user_item.html  base.html  index.html
app/templates/allauth/elements/: button.html  h1.html  h2.html  p.html  provider.html  provider_list.html
app/templates/allauth/layouts/: base.html
app/theme/static_src/: package-lock.json  package.json  tailwind.config.js
mentorme/: settings.py  urls.py  wsgi.py
